# solve-wps-pdf-menu

./: README.md  pyproject.toml
solvepdfmenu/: main.py
